// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeOutdatedPkgChoices should render choices in correct order 1`] = `
Array [
  Object {
    "message": "bar (peer) 1.0.0 ❯ 1.[93m[1m1.0[22m[39m   ",
    "name": Object {
      "currentRange": "1.0.0",
      "latestRange": "1.1.0",
      "name": "bar",
      "source": "rootPolicy",
      "targetField": "peerDependencies",
    },
  },
  Object {
    "message": "foo        1.0.0 ❯ [91m[1m2.0.0[22m[39m   ",
    "name": Object {
      "currentRange": "1.0.0",
      "latestRange": "2.0.0",
      "name": "foo",
      "source": "rootPolicy",
      "targetField": "dependencies",
    },
  },
]
`;

exports[`makeOutdatedPkgChoices should render choices with context information 1`] = `
Array [
  Object {
    "message": "bar (peer) 1.0.0 ❯ 1.[93m[1m1.0[22m[39m {comp2} ",
    "name": Object {
      "currentRange": "1.0.0",
      "latestRange": "1.1.0",
      "name": "bar",
      "source": "variants",
      "targetField": "peerDependencies",
      "variantPattern": "{comp2}",
    },
  },
  Object {
    "message": "foo        1.0.0 ❯ [91m[1m2.0.0[22m[39m comp1   ",
    "name": Object {
      "componentId": "comp1",
      "currentRange": "1.0.0",
      "latestRange": "2.0.0",
      "name": "foo",
      "source": "component",
      "targetField": "dependencies",
    },
  },
]
`;
